--- a/categories.html
+++ b/categories.html
@@ -4,14 +4,16 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://imaemo.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/font-awesome.min.css">
-
-
+  <link rel="stylesheet" type="text/css" href="https://imaemo.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="https://imaemo.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
+
+
+    <link rel="shortcut icon" href="https://imaemo.github.io/images/profile.jpg" type="image/x-icon">
+    <link rel="icon" href="https://imaemo.github.io/images/profile.jpg" type="image/x-icon">
 
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -27,7 +29,8 @@
 <meta property="og:title" content="meego"/>
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content=""/>
+<meta property="og:url" content="https://imaemo.github.io"/>
+<meta property="og:image" content="https://imaemo.github.io/images/profile.jpg">
 
   <title>meego &ndash;     Categories
 </title>
@@ -36,15 +39,15 @@
 <body>
   <aside>
     <div>
-      <a href="">
-        <img src="/theme/img/profile.png" alt="" title="">
+      <a href="https://imaemo.github.io">
+        <img src="https://imaemo.github.io/images/profile.jpg" alt="" title="">
       </a>
-      <h1><a href=""></a></h1>
+      <h1><a href="https://imaemo.github.io"></a></h1>
 
 
       <nav>
         <ul class="list">
-          <li><a href="/pages/about.html#about">about</a></li>
+          <li><a href="https://imaemo.github.io/pages/about.html#about">about</a></li>
 
           <li><a href="http://getpelican.com/" target="_blank">Pelican</a></li>
           <li><a href="http://python.org/" target="_blank">Python.org</a></li>
@@ -62,6 +65,16 @@
   </aside>
   <main>
 
+    <nav>
+      <a href="https://imaemo.github.io">    Home
+</a>
+
+      <a href="/archives.html">Archives</a>
+      <a href="/categories.html">Categories</a>
+      <a href="/tags.html">Tags</a>
+
+
+    </nav>
 
 <article class="single">
   <header>
@@ -70,7 +83,7 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="/category/python.html">Python</a> (1)</li>
+      <li><a href="https://imaemo.github.io/category/python.html">Python</a> (1)</li>
     </ul>
   </div>
 </article>
@@ -90,8 +103,8 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " meego ",
-  "url" : "",
-  "image": "",
+  "url" : "https://imaemo.github.io",
+  "image": "https://imaemo.github.io/images/profile.jpg",
   "description": ""
 }
 </script>
