--- a/hello-pelicon.html
+++ b/hello-pelicon.html
@@ -4,14 +4,16 @@
 <head>
   <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" type="text/css" href="/theme/stylesheet/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://imaemo.github.io/theme/stylesheet/style.min.css">
 
-  <link rel="stylesheet" type="text/css" href="/theme/pygments/github.min.css">
-  <link rel="stylesheet" type="text/css" href="/theme/font-awesome/css/font-awesome.min.css">
-
-
+  <link rel="stylesheet" type="text/css" href="https://imaemo.github.io/theme/pygments/github.min.css">
+  <link rel="stylesheet" type="text/css" href="https://imaemo.github.io/theme/font-awesome/css/font-awesome.min.css">
 
 
+
+
+    <link rel="shortcut icon" href="https://imaemo.github.io/images/profile.jpg" type="image/x-icon">
+    <link rel="icon" href="https://imaemo.github.io/images/profile.jpg" type="image/x-icon">
 
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -27,15 +29,15 @@
 <meta property="og:title" content="Hello pelicon"/>
 <meta property="og:description" content="搭建pelicon过程"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="/hello-pelicon.html"/>
+<meta property="og:url" content="https://imaemo.github.io/hello-pelicon.html"/>
 <meta property="og:type" content="article"/>
 <meta property="article:published_time" content="2016-12-10 15:29:00+08:00"/>
 <meta property="article:modified_time" content="2016-12-11 17:22:00+08:00"/>
-<meta property="article:author" content="/author/meego.html">
+<meta property="article:author" content="https://imaemo.github.io/author/meego.html">
 <meta property="article:section" content="Python"/>
 <meta property="article:tag" content="pelican"/>
 <meta property="article:tag" content="python"/>
-<meta property="og:image" content="">
+<meta property="og:image" content="https://imaemo.github.io/images/profile.jpg">
 
   <title>meego &ndash; Hello pelicon</title>
 
@@ -43,15 +45,15 @@
 <body>
   <aside>
     <div>
-      <a href="">
-        <img src="/theme/img/profile.png" alt="" title="">
+      <a href="https://imaemo.github.io">
+        <img src="https://imaemo.github.io/images/profile.jpg" alt="" title="">
       </a>
-      <h1><a href=""></a></h1>
+      <h1><a href="https://imaemo.github.io"></a></h1>
 
 
       <nav>
         <ul class="list">
-          <li><a href="/pages/about.html#about">about</a></li>
+          <li><a href="https://imaemo.github.io/pages/about.html#about">about</a></li>
 
           <li><a href="http://getpelican.com/" target="_blank">Pelican</a></li>
           <li><a href="http://python.org/" target="_blank">Python.org</a></li>
@@ -69,12 +71,22 @@
   </aside>
   <main>
 
+    <nav>
+      <a href="https://imaemo.github.io">    Home
+</a>
+
+      <a href="/archives.html">Archives</a>
+      <a href="/categories.html">Categories</a>
+      <a href="/tags.html">Tags</a>
+
+
+    </nav>
 
 <article class="single">
   <header>
     <h1 id="hello-pelicon">Hello pelicon</h1>
     <p>
-          Posted on 六 10 12月 2016 in <a href="/category/python.html">Python</a>
+          Posted on 六 10 12月 2016 in <a href="https://imaemo.github.io/category/python.html">Python</a>
 
 
     </p>
@@ -90,8 +102,8 @@
   </div>
   <div class="tag-cloud">
     <p>
-      <a href="/tag/pelican.html">pelican</a>
-      <a href="/tag/python.html">python</a>
+      <a href="https://imaemo.github.io/tag/pelican.html">pelican</a>
+      <a href="https://imaemo.github.io/tag/python.html">python</a>
     </p>
   </div>
 
@@ -115,8 +127,8 @@
   "@context" : "http://schema.org",
   "@type" : "Blog",
   "name": " meego ",
-  "url" : "",
-  "image": "",
+  "url" : "https://imaemo.github.io",
+  "image": "https://imaemo.github.io/images/profile.jpg",
   "description": ""
 }
 </script>
