--- a/tags.html
+++ b/tags.html
@@ -12,8 +12,8 @@
 
 
 
-    <link rel="shortcut icon" href="https://imaemo.github.io/images/profile.jpg" type="image/x-icon">
-    <link rel="icon" href="https://imaemo.github.io/images/profile.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="https://imaemo.github.io/images/profile.png" type="image/x-icon">
+    <link rel="icon" href="https://imaemo.github.io/images/profile.png" type="image/x-icon">
 
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -30,7 +30,7 @@
 <meta property="og:description" content=""/>
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://imaemo.github.io"/>
-<meta property="og:image" content="https://imaemo.github.io/images/profile.jpg">
+<meta property="og:image" content="https://imaemo.github.io/images/profile.png">
 
   <title>meego &ndash;     Tags
 </title>
@@ -40,7 +40,7 @@
   <aside>
     <div>
       <a href="https://imaemo.github.io">
-        <img src="https://imaemo.github.io/images/profile.jpg" alt="" title="">
+        <img src="https://imaemo.github.io/images/profile.png" alt="" title="">
       </a>
       <h1><a href="https://imaemo.github.io"></a></h1>
 
@@ -49,15 +49,12 @@
         <ul class="list">
           <li><a href="https://imaemo.github.io/pages/about.html#about">about</a></li>
 
-          <li><a href="http://getpelican.com/" target="_blank">Pelican</a></li>
-          <li><a href="http://python.org/" target="_blank">Python.org</a></li>
-          <li><a href="http://jinja.pocoo.org/" target="_blank">Jinja2</a></li>
+          <li><a href="http://www.baidu.com" target="_blank"></a></li>
         </ul>
       </nav>
 
       <ul class="social">
         <li><a class="sc-github" href="https://github.com/imaemo/" target="_blank"><i class="fa fa-github"></i></a></li>
-        <li><a class="sc-Another social link" href="#" target="_blank"><i class="fa fa-Another social link"></i></a></li>
       </ul>
     </div>
 
@@ -104,7 +101,7 @@
   "@type" : "Blog",
   "name": " meego ",
   "url" : "https://imaemo.github.io",
-  "image": "https://imaemo.github.io/images/profile.jpg",
+  "image": "https://imaemo.github.io/images/profile.png",
   "description": ""
 }
 </script>
