--- a/archives.html
+++ b/archives.html
@@ -80,6 +80,8 @@
   </header>
   <div>
     <dl>
+      <dt>一 12 十二月 2016</dt>
+      <dd><a href="https://imaemo.github.io/centos7-xia-bu-shu-django.html">Centos7 下部署django</a></dd>
       <dt>六 10 十二月 2016</dt>
       <dd><a href="https://imaemo.github.io/hello-pelicon.html">Hello pelicon</a></dd>
     </dl>
