--- a/categories.html
+++ b/categories.html
@@ -80,7 +80,7 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="https://imaemo.github.io/category/python.html">Python</a> (1)</li>
+      <li><a href="https://imaemo.github.io/category/python.html">python</a> (2)</li>
     </ul>
   </div>
 </article>
