--- a/archives.html
+++ b/archives.html
@@ -80,6 +80,8 @@
   </header>
   <div>
     <dl>
+      <dt>四 15 十二月 2016</dt>
+      <dd><a href="https://imaemo.github.io/zai-xian-geng-xin-djangoxiang-mu-yu-dao-1050-table-django_content_type-already-exists.html">在线更新django项目,遇到1050, "Table 'django_content_type' already exists"</a></dd>
       <dt>一 12 十二月 2016</dt>
       <dd><a href="https://imaemo.github.io/centos7-xia-bu-shu-django.html">Centos7 下部署django</a></dd>
       <dt>六 10 十二月 2016</dt>
