--- a/index.html
+++ b/index.html
@@ -76,6 +76,26 @@
 
 <article>
   <header>
+    <h2><a href="https://imaemo.github.io/jquery-datatables-pai-xu-shai-xuan.html#jquery-datatables-pai-xu-shai-xuan">jquery dataTables 排序，筛选</a></h2>
+    <p>
+          Posted on 一 26 十二月 2016 in <a href="https://imaemo.github.io/category/front.html">front</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://imaemo.github.io/tag/datatable.html">datatable</a>
+    </p>
+  </header>
+  <div>
+      <p>dataTables 使用笔记</p>
+      <br>
+      <a class="btn" href="https://imaemo.github.io/jquery-datatables-pai-xu-shai-xuan.html#jquery-datatables-pai-xu-shai-xuan">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://imaemo.github.io/zai-xian-geng-xin-djangoxiang-mu-yu-dao-1050-table-django_content_type-already-exists.html#zai-xian-geng-xin-djangoxiang-mu-yu-dao-1050-table-django_content_type-already-exists">在线更新django项目,遇到1050, "Table 'django_content_type' already exists"</a></h2>
     <p>
           Posted on 四 15 十二月 2016 in <a href="https://imaemo.github.io/category/python.html">python</a>
