--- a/categories.html
+++ b/categories.html
@@ -80,6 +80,7 @@
   </header>
   <div>
     <ul class="list">
+      <li><a href="https://imaemo.github.io/category/front.html">front</a> (1)</li>
       <li><a href="https://imaemo.github.io/category/python.html">python</a> (3)</li>
     </ul>
   </div>
