--- a/index.html
+++ b/index.html
@@ -76,6 +76,26 @@
 
 <article>
   <header>
+    <h2><a href="https://imaemo.github.io/gpgjia-mi-he-mysqlbei-fen.html#gpgjia-mi-he-mysqlbei-fen">GPG加密和MySQL备份</a></h2>
+    <p>
+          Posted on 日 05 二月 2017 in <a href="https://imaemo.github.io/category/linux.html">linux</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://imaemo.github.io/tag/gpg.html">GPG</a>,              <a href="https://imaemo.github.io/tag/mysql.html">MySQL</a>
+    </p>
+  </header>
+  <div>
+      <p>记录GPG加密与MySQL备份</p>
+      <br>
+      <a class="btn" href="https://imaemo.github.io/gpgjia-mi-he-mysqlbei-fen.html#gpgjia-mi-he-mysqlbei-fen">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://imaemo.github.io/jquery-datatables-pai-xu-shai-xuan.html#jquery-datatables-pai-xu-shai-xuan">jquery dataTables 排序，筛选</a></h2>
     <p>
           Posted on 一 26 十二月 2016 in <a href="https://imaemo.github.io/category/front.html">front</a>
