--- a/index.html
+++ b/index.html
@@ -76,6 +76,26 @@
 
 <article>
   <header>
+    <h2><a href="https://imaemo.github.io/celery-yi-bu-ren-wu-chu-li.html#celery-yi-bu-ren-wu-chu-li">Celery-异步任务处理</a></h2>
+    <p>
+          Posted on 日 05 二月 2017 in <a href="https://imaemo.github.io/category/linux.html">linux</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://imaemo.github.io/tag/gpg.html">GPG</a>,              <a href="https://imaemo.github.io/tag/mysql.html">MySQL</a>
+    </p>
+  </header>
+  <div>
+      <p>用celery完成定时备份操作</p>
+      <br>
+      <a class="btn" href="https://imaemo.github.io/celery-yi-bu-ren-wu-chu-li.html#celery-yi-bu-ren-wu-chu-li">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://imaemo.github.io/gpgjia-mi-he-mysqlbei-fen.html#gpgjia-mi-he-mysqlbei-fen">GPG加密和MySQL备份</a></h2>
     <p>
           Posted on 日 05 二月 2017 in <a href="https://imaemo.github.io/category/linux.html">linux</a>
