--- a/archives.html
+++ b/archives.html
@@ -81,6 +81,7 @@
   <div>
     <dl>
       <dt>日 05 二月 2017</dt>
+      <dd><a href="https://imaemo.github.io/celery-yi-bu-ren-wu-chu-li.html">Celery-异步任务处理</a></dd>
       <dd><a href="https://imaemo.github.io/gpgjia-mi-he-mysqlbei-fen.html">GPG加密和MySQL备份</a></dd>
       <dt>一 26 十二月 2016</dt>
       <dd><a href="https://imaemo.github.io/jquery-datatables-pai-xu-shai-xuan.html">jquery dataTables 排序，筛选</a></dd>
