modify new post

--- a/tags.html
+++ b/tags.html
@@ -79,10 +79,11 @@
 </h1>
   </header>
   <div>
-    <ul class="list">          <li><a href="https://imaemo.github.io/tag/datatable.html">datatable</a> (1)</li>
+    <ul class="list">          <li><a href="https://imaemo.github.io/tag/celery.html">Celery</a> (1)</li>
+          <li><a href="https://imaemo.github.io/tag/datatable.html">datatable</a> (1)</li>
           <li><a href="https://imaemo.github.io/tag/django.html">django</a> (2)</li>
-          <li><a href="https://imaemo.github.io/tag/gpg.html">GPG</a> (2)</li>
-          <li><a href="https://imaemo.github.io/tag/mysql.html">MySQL</a> (2)</li>
+          <li><a href="https://imaemo.github.io/tag/gpg.html">GPG</a> (1)</li>
+          <li><a href="https://imaemo.github.io/tag/mysql.html">MySQL</a> (1)</li>
           <li><a href="https://imaemo.github.io/tag/nginx.html">nginx</a> (1)</li>
           <li><a href="https://imaemo.github.io/tag/pelican.html">pelican</a> (1)</li>
           <li><a href="https://imaemo.github.io/tag/python.html">python</a> (1)</li>
