--- a/celery-yi-bu-ren-wu-chu-li.html
+++ b/celery-yi-bu-ren-wu-chu-li.html
@@ -31,8 +31,8 @@
 <meta property="og:locale" content="en_US"/>
 <meta property="og:url" content="https://imaemo.github.io/celery-yi-bu-ren-wu-chu-li.html"/>
 <meta property="og:type" content="article"/>
-<meta property="article:published_time" content="2017-02-05 22:29:00+08:00"/>
-<meta property="article:modified_time" content="2017-02-08 00:00:00+08:00"/>
+<meta property="article:published_time" content="2017-02-15 22:29:00+08:00"/>
+<meta property="article:modified_time" content=""/>
 <meta property="article:author" content="https://imaemo.github.io/author/meego.html">
 <meta property="article:section" content="python"/>
 <meta property="article:tag" content="Celery"/>
@@ -82,7 +82,7 @@
   <header>
     <h1 id="celery-yi-bu-ren-wu-chu-li">Celery-异步任务处理</h1>
     <p>
-          Posted on 日 05 二月 2017 in <a href="https://imaemo.github.io/category/python.html">python</a>
+          Posted on 三 15 二月 2017 in <a href="https://imaemo.github.io/category/python.html">python</a>
 
 
     </p>
