--- a/index.html
+++ b/index.html
@@ -76,9 +76,29 @@
 
 <article>
   <header>
+    <h2><a href="https://imaemo.github.io/ubuntu-1204-an-zhuang-redmine.html#ubuntu-1204-an-zhuang-redmine">ubuntu 12.04 安装redmine</a></h2>
+    <p>
+          Posted on 四 16 二月 2017 in <a href="https://imaemo.github.io/category/linux.html">linux</a>
+
+
+          &#8226;     Tagged with
+
+              <a href="https://imaemo.github.io/tag/redmine.html">redmine</a>
+    </p>
+  </header>
+  <div>
+      <p>搭建redmine笔记</p>
+      <br>
+      <a class="btn" href="https://imaemo.github.io/ubuntu-1204-an-zhuang-redmine.html#ubuntu-1204-an-zhuang-redmine">    Continue reading
+</a>
+  </div>
+  <hr />
+</article>
+<article>
+  <header>
     <h2><a href="https://imaemo.github.io/celery-yi-bu-ren-wu-chu-li.html#celery-yi-bu-ren-wu-chu-li">Celery-异步任务处理</a></h2>
     <p>
-          Posted on 日 05 二月 2017 in <a href="https://imaemo.github.io/category/python.html">python</a>
+          Posted on 三 15 二月 2017 in <a href="https://imaemo.github.io/category/python.html">python</a>
 
 
           &#8226;     Tagged with
