--- a/pages/about.html
+++ b/pages/about.html
@@ -77,9 +77,10 @@
     <h1 id="about">about</h1>
   </header>
   <div>
-    <p>喜欢新奇有趣的东西<br />
-性格开朗活性<br />
-^_^    </p>
+    <p>很早就了解了四轴，可是一直还没有去实现，以后一要做一台<br />
+raspberry pi 一定也要入手一台<br />
+最近希望把openwrt的多拨搞定<br />
+可以用esp8266和esp32做点有意义的东西  </p>
   </div>
 </article>
 
