--- a/archives.html
+++ b/archives.html
@@ -86,6 +86,7 @@
       <dd><a href="https://imaemo.github.io/ubuntu-1204-an-zhuang-redmine.html">ubuntu 12.04 安装redmine</a></dd>
       <dt>三 15 二月 2017</dt>
       <dd><a href="https://imaemo.github.io/celery-yi-bu-ren-wu-chu-li.html">Celery-异步任务处理</a></dd>
+      <dd><a href="https://imaemo.github.io/django-celery-de-upstartjiao-ben.html">django & celery 的upstart脚本</a></dd>
       <dt>日 05 二月 2017</dt>
       <dd><a href="https://imaemo.github.io/gpgjia-mi-he-mysqlbei-fen.html">GPG加密和MySQL备份</a></dd>
       <dt>一 26 十二月 2016</dt>
