update new post

--- a/archives.html
+++ b/archives.html
@@ -80,13 +80,14 @@
   </header>
   <div>
     <dl>
+      <dt>日 09 四月 2017</dt>
+      <dd><a href="https://imaemo.github.io/django-celery-yi-xie-bi-ji.html">django & celery 一些笔记</a></dd>
       <dt>一 27 二月 2017</dt>
       <dd><a href="https://imaemo.github.io/django-mysql-queyryshi-yong-datetimemei-you-jie-guo.html">django & mysql, queyry使用datetime没有结果</a></dd>
       <dt>四 16 二月 2017</dt>
       <dd><a href="https://imaemo.github.io/ubuntu-1204-an-zhuang-redmine.html">ubuntu 12.04 安装redmine</a></dd>
       <dt>三 15 二月 2017</dt>
       <dd><a href="https://imaemo.github.io/celery-yi-bu-ren-wu-chu-li.html">Celery-异步任务处理</a></dd>
-      <dd><a href="https://imaemo.github.io/django-celery-de-upstartjiao-ben.html">django & celery 的upstart脚本</a></dd>
       <dt>日 05 二月 2017</dt>
       <dd><a href="https://imaemo.github.io/gpgjia-mi-he-mysqlbei-fen.html">GPG加密和MySQL备份</a></dd>
       <dt>一 26 十二月 2016</dt>
