--- a/django-celery-yi-xie-bi-ji.html
+++ b/django-celery-yi-xie-bi-ji.html
@@ -26,19 +26,19 @@
 <meta name="description" content="ubutu 12.04,整合django和celery,以及对应的upstart脚本" />
 <meta name="keywords" content="Celery">
 <meta property="og:site_name" content="meego"/>
-<meta property="og:title" content="django & celery 的upstart脚本"/>
+<meta property="og:title" content="django & celery 一些笔记"/>
 <meta property="og:description" content="ubutu 12.04,整合django和celery,以及对应的upstart脚本"/>
 <meta property="og:locale" content="en_US"/>
-<meta property="og:url" content="https://imaemo.github.io/django-celery-de-upstartjiao-ben.html"/>
+<meta property="og:url" content="https://imaemo.github.io/django-celery-yi-xie-bi-ji.html"/>
 <meta property="og:type" content="article"/>
-<meta property="article:published_time" content="2017-02-15 22:29:00+08:00"/>
+<meta property="article:published_time" content="2017-04-09 22:29:00+08:00"/>
 <meta property="article:modified_time" content=""/>
 <meta property="article:author" content="https://imaemo.github.io/author/meego.html">
 <meta property="article:section" content="python"/>
 <meta property="article:tag" content="Celery"/>
 <meta property="og:image" content="https://imaemo.github.io/images/profile.png">
 
-  <title>meego &ndash; django & celery 的upstart脚本</title>
+  <title>meego &ndash; django & celery 一些笔记</title>
 
 </head>
 <body>
@@ -80,9 +80,9 @@
 
 <article class="single">
   <header>
-    <h1 id="django-celery-de-upstartjiao-ben">django & celery 的upstart脚本</h1>
+    <h1 id="django-celery-yi-xie-bi-ji">django & celery 一些笔记</h1>
     <p>
-          Posted on 三 15 二月 2017 in <a href="https://imaemo.github.io/category/python.html">python</a>
+          Posted on 日 09 四月 2017 in <a href="https://imaemo.github.io/category/python.html">python</a>
 
 
     </p>
@@ -172,11 +172,6 @@ sudo service project_celerybeat start
 <a href="https://help.ubuntu.com/community/UbuntuBootupHowto">https://help.ubuntu.com/community/UbuntuBootupHowto</a>
   <a href="http://stackoverflow.com/questions/17667239/managing-uwsgi-with-upstart?newreg=6e23686727864cf381a8d612159e23b3">http://stackoverflow.com/questions/17667239/managing-uwsgi-with-upstart?newreg=6e23686727864cf381a8d612159e23b3</a>
   <a href="http://blog.csdn.net/gatieme/article/details/45251389">http://blog.csdn.net/gatieme/article/details/45251389</a></p>
-<p><a href="http://docs.celeryproject.org/en/latest/index.html">http://docs.celeryproject.org/en/latest/index.html</a><br />
-<a href="http://www.ibm.com/developerworks/cn/opensource/os-cn-celery-web-service/index.html#ibm-pcon">http://www.ibm.com/developerworks/cn/opensource/os-cn-celery-web-service/index.html#ibm-pcon</a><br />
-<a href="https://pythad.github.io/articles/2016-12/how-to-run-celery-as-a-daemon-in-production">https://pythad.github.io/articles/2016-12/how-to-run-celery-as-a-daemon-in-production</a><br />
-<a href="https://github.com/celery/django-celery/issues/215">https://github.com/celery/django-celery/issues/215</a><br />
-<a href="http://emadmokhtar.com/how-to-run-celery-as-daemon.html">http://emadmokhtar.com/how-to-run-celery-as-daemon.html</a>  </p>
   </div>
   <div class="tag-cloud">
     <p>
