--- a/celery-yi-bu-ren-wu-chu-li.html
+++ b/celery-yi-bu-ren-wu-chu-li.html
@@ -82,7 +82,7 @@
   <header>
     <h1 id="celery-yi-bu-ren-wu-chu-li">Celery-异步任务处理</h1>
     <p>
-          Posted on 三 15 二月 2017 in <a href="https://imaemo.github.io/category/python.html">python</a>
+          Posted on 三 15 2月 2017 in <a href="https://imaemo.github.io/category/python.html">python</a>
 
 
     </p>
