--- a/centos7-xia-bu-shu-django.html
+++ b/centos7-xia-bu-shu-django.html
@@ -84,7 +84,7 @@
   <header>
     <h1 id="centos7-xia-bu-shu-django">Centos7 下部署django</h1>
     <p>
-          Posted on 一 12 十二月 2016 in <a href="https://imaemo.github.io/category/python.html">python</a>
+          Posted on 一 12 12月 2016 in <a href="https://imaemo.github.io/category/python.html">python</a>
 
 
     </p>
