--- a/django-celery-yi-xie-bi-ji.html
+++ b/django-celery-yi-xie-bi-ji.html
@@ -82,7 +82,7 @@
   <header>
     <h1 id="django-celery-yi-xie-bi-ji">django & celery 一些笔记</h1>
     <p>
-          Posted on 日 09 四月 2017 in <a href="https://imaemo.github.io/category/python.html">python</a>
+          Posted on 日 09 4月 2017 in <a href="https://imaemo.github.io/category/python.html">python</a>
 
 
     </p>
