--- a/django-mysql-queyryshi-yong-datetimemei-you-jie-guo.html
+++ b/django-mysql-queyryshi-yong-datetimemei-you-jie-guo.html
@@ -82,7 +82,7 @@
   <header>
     <h1 id="django-mysql-queyryshi-yong-datetimemei-you-jie-guo">django & mysql, queyry使用datetime没有结果</h1>
     <p>
-          Posted on 一 27 二月 2017 in <a href="https://imaemo.github.io/category/python.html">python</a>
+          Posted on 一 27 2月 2017 in <a href="https://imaemo.github.io/category/python.html">python</a>
 
 
     </p>
