--- a/gpgjia-mi-he-mysqlbei-fen.html
+++ b/gpgjia-mi-he-mysqlbei-fen.html
@@ -83,7 +83,7 @@
   <header>
     <h1 id="gpgjia-mi-he-mysqlbei-fen">GPG加密和MySQL备份</h1>
     <p>
-          Posted on 日 05 二月 2017 in <a href="https://imaemo.github.io/category/linux.html">linux</a>
+          Posted on 日 05 2月 2017 in <a href="https://imaemo.github.io/category/linux.html">linux</a>
 
 
     </p>
