--- a/jquery-datatables-pai-xu-shai-xuan.html
+++ b/jquery-datatables-pai-xu-shai-xuan.html
@@ -82,7 +82,7 @@
   <header>
     <h1 id="jquery-datatables-pai-xu-shai-xuan">jquery dataTables 排序，筛选</h1>
     <p>
-          Posted on 一 26 十二月 2016 in <a href="https://imaemo.github.io/category/front.html">front</a>
+          Posted on 一 26 12月 2016 in <a href="https://imaemo.github.io/category/front.html">front</a>
 
 
     </p>
