--- a/tags.html
+++ b/tags.html
@@ -86,8 +86,9 @@
           <li><a href="https://imaemo.github.io/tag/mysql.html">MySQL</a> (1)</li>
           <li><a href="https://imaemo.github.io/tag/nginx.html">nginx</a> (1)</li>
           <li><a href="https://imaemo.github.io/tag/pelican.html">pelican</a> (1)</li>
-          <li><a href="https://imaemo.github.io/tag/python.html">python</a> (1)</li>
+          <li><a href="https://imaemo.github.io/tag/python.html">python</a> (2)</li>
           <li><a href="https://imaemo.github.io/tag/redmine.html">redmine</a> (1)</li>
+          <li><a href="https://imaemo.github.io/tag/shell.html">shell</a> (1)</li>
           <li><a href="https://imaemo.github.io/tag/uwsgi.html">uwsgi</a> (2)</li>
     </ul>
   </div>
