--- a/zai-xian-geng-xin-djangoxiang-mu-yu-dao-1050-table-django_content_type-already-exists.html
+++ b/zai-xian-geng-xin-djangoxiang-mu-yu-dao-1050-table-django_content_type-already-exists.html
@@ -83,7 +83,7 @@
   <header>
     <h1 id="zai-xian-geng-xin-djangoxiang-mu-yu-dao-1050-table-django_content_type-already-exists">在线更新django项目,遇到1050, "Table 'django_content_type' already exists"</h1>
     <p>
-          Posted on 四 15 十二月 2016 in <a href="https://imaemo.github.io/category/python.html">python</a>
+          Posted on 四 15 12月 2016 in <a href="https://imaemo.github.io/category/python.html">python</a>
 
 
     </p>
