--- a/hello-pelicon.html
+++ b/hello-pelicon.html
@@ -83,7 +83,7 @@
   <header>
     <h1 id="hello-pelicon">Hello pelicon</h1>
     <p>
-          Posted on 六 10 十二月 2016 in <a href="https://imaemo.github.io/category/python.html">Python</a>
+          Posted on 六 10 12月 2016 in <a href="https://imaemo.github.io/category/python.html">Python</a>
 
 
     </p>
