--- a/ubuntu-1204-an-zhuang-redmine.html
+++ b/ubuntu-1204-an-zhuang-redmine.html
@@ -82,7 +82,7 @@
   <header>
     <h1 id="ubuntu-1204-an-zhuang-redmine">ubuntu 12.04 安装redmine</h1>
     <p>
-          Posted on 四 16 二月 2017 in <a href="https://imaemo.github.io/category/linux.html">linux</a>
+          Posted on 四 16 2月 2017 in <a href="https://imaemo.github.io/category/linux.html">linux</a>
 
 
     </p>
